src/test/resources/syntax/invalid/group_definition_invalid_format.unpick
unpick v3
const int
    format = foo